fix: refactor code for improved readability and maintainability